Mon Jun 17 2002  Vitezslav Samel <samel@mail.cz>
	* ublock.c:
	insert braces to make if() block evident

Sun Jun  9 2002  Vitezslav Samel <samel@mail.cz>
	* b.c, bw.c, cmd.c, hash.c, kbd.c, macro.c, main.c, rc.c, regex.c,
	termcap.c, tty.c, ublock.c, umath.c, vfile.c:
	change "expr, expr" to "expr; expr" where appropriate to make sources
	more readable (should have no impact on code) (take 2)

Sun Jun  9 2002  Vitezslav Samel <samel@mail.cz>
	* hash.c, hash.h:
	move hnext() definition into hash.c

Sun Jun  9 2002  Vitezslav Samel <samel@mail.cz>
	* bw.c, rc.c, termcap.c, ufile.c, usearch.c:
	kill some warnings when compiled with -Wall

Sat Jun  8 2002  Vitezslav Samel <samel@mail.cz>
	* cmd.c:
	unwrap array elements in initialization of cmds[]

Sat Jun  8 2002  Vitezslav Samel <samel@mail.cz>
	* va.c, va.h:
	change aELEMENT #define to typedef

Sat Jun  8 2002  Vitezslav Samel <samel@mail.cz>
	* ufile.c:
	change write() to joe_write() to avoid partly copied files

Sat Jun  8 2002  Vitezslav Samel <samel@mail.cz>
	* termcap.c:
	strcmp() can return values other than -1/0/+1

Sat Jun  8 2002  Vitezslav Samel <samel@mail.cz>
	* b.c, bw.c, macro.c, path.c, pw.c, queue.h, rc.c, regex.c, scrn.c,
	scrn.h, tab.c, termcap.c, termidx.c, tty.c, tw.c, ublock.c, uedit.c,
	uerror.c, ufile.c, uformat.c, undo.c, usearch.c, ushell.c, vfile.c,
	vs.c, w.c:
	change "expr, expr" to "expr; expr" where appropriate to make sources
	more readable (should have no impact on code)

Tue Jun  4 2002  Vitezslav Samel <samel@mail.cz>
	* scrn.c:
	don't clear screen when nonzero skiptop is given (part 2)

Mon Jun  3 2002  Vitezslav Samel <samel@mail.cz>
	* scrn.c:
	don't clear screen when nonzero skiptop is given

Sat Jun  1 2002  Vitezslav Samel <samel@mail.cz>
	* configure.ac, utils.c:
	kill warnings when compilling with -Wundef

Tue May 21 2002  Vitezslav Samel <samel@mail.cz>
	* poshist.c, scrn.c, uformat.c:
	include some headers which are needed to compile without warnings about