@@ -1,3 +1,8 @@
+Wed Jun 26 2002  Vitezslav Samel <samel@mail.cz>
+	* bw.c, rc.c, rc.h, w.c:
+	rename getcontext() to kmap_getcontext() to prevent conflict with glibc
+	(from Debian patches)
+
 Mon Jun 17 2002  Vitezslav Samel <samel@mail.cz>
 	* ublock.c:
 	insert braces to make if() block evident
